sql-check/tests/compile_fail/postgres/invalid_sql_syntax.stderr
error: SQL validation failed: error returned from database: syntax error at or near "SELEC"
 --> tests/compile_fail/postgres/invalid_sql_syntax.rs:4:16
  |
4 |     let _sql = check!("SELEC * FROM");
  |                ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::check_impl` which comes from the expansion of the macro `check` (in Nightly builds, run with -Z macro-backtrace for more info)
